welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:2: error: not found: value Arreter
Arreter de danser match {
^BDR2:18: error: not found: value Arreter
	case _  => Arreter de danser
                   ^